<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000" >

    <LinearLayout
        android:id="@+id/pay_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_above="@+id/keyboard"
        android:background="@drawable/edittext_bg_nor"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/pay_title"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/pay_title"
            android:textColor="#404040"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e1dfdf" />

        <TextView
            android:id="@+id/pay_content"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:text="@string/pay_content"
            android:textColor="#606060"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/sex_box_bg"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/pay_box1"
                style="@style/InputTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@drawable/sex_boxline_bg" />

            <TextView
                android:id="@+id/pay_box2"
                style="@style/InputTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@drawable/sex_boxline_bg" />

            <TextView
                android:id="@+id/pay_box3"
                style="@style/InputTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@drawable/sex_boxline_bg" />

            <TextView
                android:id="@+id/pay_box4"
                style="@style/InputTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@drawable/sex_boxline_bg" />

            <TextView
                android:id="@+id/pay_box5"
                style="@style/InputTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@drawable/sex_boxline_bg" />

            <TextView
                android:id="@+id/pay_box6"
                style="@style/InputTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/pay_cancel"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/pay_button_selector"
                android:gravity="center"
                android:text="@string/pay_cancel"
                android:textColor="#404040"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/pay_sure"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/pay_button_selector"
                android:gravity="center"
                android:text="@string/pay_sure"
                android:textColor="#404040"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/keyboard"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:background="#CFCFCF"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/pay_keyboard_one"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/keyboard_one_selector"
                android:contentDescription="@string/action_settings" />

            <ImageView
                android:id="@+id/pay_keyboard_two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@drawable/keyboard_two_selector"
                android:contentDescription="@string/action_settings" />

            <ImageView
                android:id="@+id/pay_keyboard_three"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/keyboard_three_selector"
                android:contentDescription="@string/action_settings" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/pay_keyboard_four"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/keyboard_four_selector"
                android:contentDescription="@string/action_settings" />

            <ImageView
                android:id="@+id/pay_keyboard_five"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@drawable/keyboard_five_selector"
                android:contentDescription="@string/action_settings" />

            <ImageView
                android:id="@+id/pay_keyboard_sex"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/keyboard_sex_selector"
                android:contentDescription="@string/action_settings" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/pay_keyboard_seven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/keyboard_seven_selector"
                android:contentDescription="@string/action_settings" />

            <ImageView
                android:id="@+id/pay_keyboard_eight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@drawable/keyboard_eight_selector"
                android:contentDescription="@string/action_settings" />

            <ImageView
                android:id="@+id/pay_keyboard_nine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/keyboard_nine_selector"
                android:contentDescription="@string/action_settings" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/pay_keyboard_space"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/keyboard_space"
                android:contentDescription="@string/action_settings" />

            <ImageView
                android:id="@+id/pay_keyboard_zero"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/keyboard_zero_selector"
                android:contentDescription="@string/action_settings" />

            <ImageView
                android:id="@+id/pay_keyboard_del"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/keyboard_del_selector"
                android:contentDescription="@string/action_settings" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/lockgp_activity_pay_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/common_down_select_color">

        <ProgressBar
            style="@style/LoadProgressBar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

</RelativeLayout>